--- a/views/composants/nav-desk.ejs
+++ b/views/composants/nav-desk.ejs
@@ -1,12 +1,12 @@
 <div class="nav-desk">
-  <h4 onclick="accueil()" style="cursor: pointer;"><strong>LafyShop</strong></h4>
-  <input class="input" name="text" type="text" placeholder="Rechercher ici ....">
+  <h4 onclick="accueil()" style="cursor: pointer; color: black;"><strong>LafyShop</strong></h4>
+  <input class="input"  name="text" type="text" placeholder="Rechercher ici ....">
 
   <label class="switch">
     <input type="checkbox" id="darkModeToggle" onclick="toggleDarkMode()">
     <span class="slider"></span>
   </label>
-  <i onclick="panier()" class='bx bxs-shopping-bag-alt' style="font-size: 2.2rem; cursor: pointer;"></i>
+  <i onclick="panier()" class='bx bxs-shopping-bag-alt' style="font-size: 2.2rem; cursor: pointer; color: black;"></i>
 
 </div>
 
