dark mode deleted

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,6 @@
     display: none;
   }
 
-
   /* la navigation ici  */
 
   /* la barre de recherche ici */
@@ -1239,7 +1238,7 @@
 
   /* display none les composant de desk vision  */
 
-  /* Media Query pour les téléphones (max-width: 767px) */
+  /* Media Query pour les pc (min-width: 767px) */
   @media only screen and (min-width: 767px) {
 
     body a {
@@ -1281,6 +1280,7 @@
       width: 100%;
       display: flex;
       align-items: center;
+      justify-content: space-around;
       height: auto;
       padding: 12px 0px 12px 45px;
       margin-top: 35px;
@@ -1316,59 +1316,6 @@
 
     .input:focus {
       border: 2px solid grey;
-    }
-
-    /* The switch - the box around the slider */
-    .nav-desk .switch {
-      font-size: 17px !important;
-      position: relative;
-      display: inline-block;
-      width: 3.5em;
-      height: 2em !important;
-      margin-right: 60px;
-    }
-
-    /* Hide default HTML checkbox */
-    .nav-desk .switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-
-    /* The slider */
-    .nav-desk .slider {
-      --background: #28096b;
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: var(--background);
-      transition: .5s;
-      border-radius: 30px;
-    }
-
-    .nav-desk .slider:before {
-      position: absolute;
-      content: "";
-      height: 1.4em !important;
-      width: 1.4em;
-      border-radius: 50%;
-      left: 10%;
-      bottom: 15%;
-      box-shadow: inset 8px -4px 0px 0px #fff000;
-      background: var(--background);
-      transition: .5s;
-    }
-
-    .nav-desk input:checked+.slider {
-      background-color: #522ba7;
-    }
-
-    .nav-desk input:checked+.slider:before {
-      transform: translateX(100%);
-      box-shadow: inset 15px -4px 0px 15px #fff000;
     }
 
     .menu-list {
