--- a/views/composants/nav-desk.ejs
+++ b/views/composants/nav-desk.ejs
@@ -2,10 +2,11 @@
   <h4 onclick="accueil()" style="cursor: pointer; color: black;"><strong>LafyShop</strong></h4>
   <input class="input"  name="text" type="text" placeholder="Rechercher ici ....">
 
-  <label class="switch">
+  <!-- <label class="switch">
     <input type="checkbox" id="darkModeToggle" onclick="toggleDarkMode()">
-    <span class="slider"></span>
-  </label>
+    <span class="check-slider"></span>
+  </label> -->
+  <i class='bx bx-user' style="font-size: 2.2rem; cursor: pointer; color: black;"></i>
   <i onclick="panier()" class='bx bxs-shopping-bag-alt' style="font-size: 2.2rem; cursor: pointer; color: black;"></i>
 
 </div>
@@ -18,4 +19,5 @@
   var mode = localStorage.setItem('mode','dark');
 
   }
+  
 </script>
