--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -57,7 +57,12 @@ button {
     font-size: 1.1rem;
     font-weight: 100;
 }
-
+.menu-list {
+    display: none;
+}
+.nav-desk{
+    display: none;
+}
 @media only screen and (min-width: 767px) {
     body .promo {
         margin-top: 0px;
@@ -81,6 +86,7 @@ button {
         width: 100%;
         display: flex;
         align-items: center;
+        justify-content: space-around;
         height: auto;
         padding: 12px 0px 12px 45px;
         margin-top: 35px;
