--- a/public/css/produit-list.css
+++ b/public/css/produit-list.css
@@ -522,6 +522,14 @@ body .main {
 
 /* footer ici  */
 
+.menu-list {
+  display: none;
+}
+
+.nav-desk {
+  display: none;
+}
+
 /* media query pour pc view  */
 @media only screen and (min-width: 767px) {
 
@@ -575,60 +583,6 @@ body .main {
     border: 2px solid grey;
   }
 
-  /* The switch - the box around the slider */
-  .nav-desk .switch {
-    font-size: 17px;
-    position: relative;
-    display: inline-block;
-    width: 3.5em;
-    height: 2em;
-    margin-right: 60px;
-  }
-
-  /* Hide default HTML checkbox */
-  .nav-desk .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-
-  /* The slider */
-  .nav-desk .slider {
-    --background: #28096b;
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--background);
-    transition: .5s;
-    border-radius: 30px;
-  }
-
-  .nav-desk .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    border-radius: 50%;
-    left: 10%;
-    bottom: 15%;
-    box-shadow: inset 8px -4px 0px 0px #fff000;
-    background: var(--background);
-    transition: .5s;
-  }
-
-  .nav-desk input:checked+.slider {
-    background-color: #522ba7;
-  }
-
-  .nav-desk input:checked+.slider:before {
-    transform: translateX(100%);
-    box-shadow: inset 15px -4px 0px 15px #fff000;
-  }
-
-  /* la nav de pc view */
 
   body .main {
     margin-top: 55px;
@@ -700,6 +654,7 @@ body .main {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-around;
     height: auto;
     padding: 12px 0px 12px 45px;
     margin-top: 35px;
