css adapter a pc view

--- a/public/css/commander.css
+++ b/public/css/commander.css
@@ -88,3 +88,14 @@
     transform: translate(5px,5px);
     transition-duration: .3s;
   }
+
+
+    /* media query pour pc view  */
+    @media only screen and (min-width: 767px) {
+
+      .main{
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
