--- a/public/css/valider.css
+++ b/public/css/valider.css
@@ -56,3 +56,13 @@ body h6{
     bottom: 10px;
     
 }
+
+        /* media query pour pc view  */
+        @media only screen and (min-width: 767px) {
+    
+            .main {
+                width: 50%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
