--- a/views/iphonePage.ejs
+++ b/views/iphonePage.ejs
@@ -46,7 +46,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/phone">Telephones</a> /
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="/iphone">Iphones</a>
     </div>
     <br> <br>
