--- a/views/mixeurs.ejs
+++ b/views/mixeurs.ejs
@@ -44,7 +44,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/electro">Retour / </a>
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#"> Mixeurs </a>
     </div>
     <br> <br>
