--- a/views/oppoPage.ejs
+++ b/views/oppoPage.ejs
@@ -43,7 +43,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/phone">Telephone</a> /
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#">Oppo</a>
     </div>
     <br> <br>
