--- a/views/tecnoPage.ejs
+++ b/views/tecnoPage.ejs
@@ -44,7 +44,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/phone">Retour</a> /
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#">Tecno</a>
     </div>
     <br> <br>
