--- a/views/chaine.ejs
+++ b/views/chaine.ejs
@@ -43,7 +43,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/montres">Retour</a> /
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#">Chaines</a>
     </div>
     <br> <br>
