--- a/views/charbon.ejs
+++ b/views/charbon.ejs
@@ -43,7 +43,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/chichaStore">Retour / </a>
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#"> Charbon </a>
     </div>
     <br> <br>
