--- a/views/chicha.ejs
+++ b/views/chicha.ejs
@@ -41,7 +41,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/chichaStore">Retour / </a>
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#"> Chicha </a>
     </div>
     <br> <br>
