--- a/views/grillesPains.ejs
+++ b/views/grillesPains.ejs
@@ -45,7 +45,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/electro">Retour / </a>
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#"> Grille-pain </a>
     </div>
     <br> <br>
