--- a/views/montresPage.ejs
+++ b/views/montresPage.ejs
@@ -42,7 +42,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/montres">Montres</a> /
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#">Montres</a>
     </div>
     <br> <br>
