--- a/views/puff.ejs
+++ b/views/puff.ejs
@@ -42,7 +42,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/chichaStore">Retour / </a>
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#"> Puff </a>
     </div>
     <br> <br>
