--- a/views/sacHPage.ejs
+++ b/views/sacHPage.ejs
@@ -39,7 +39,7 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/habitsH">Retour</a> /
+      <a style="text-decoration: none; color: black;" href=" javascript:history.back()">Retour</a> /
       <a style="text-decoration: none; color: black;" href="#">Sac</a>
     </div>
     <br> <br>
