--- a/views/commander.ejs
+++ b/views/commander.ejs
@@ -97,7 +97,7 @@
 
 
       // Effectuez une requête HTTP POST vers le serveur
-      if (nom.value !== '' && adresse.value !== '' && tel.value !== '') {
+      if (nom !== '' && adresse !== '' && tel !== '') {
         // Construire l'objet data à inclure dans le corps de la requête
         var data = {
           nom: nom,
