--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -80,13 +80,13 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="appartement()">
+        <!-- <div id="link" onclick="appartement()">
             <div class="left">
                 <i class="fa-solid fa-hotel"></i>
                 <p>Location d'appartement</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
-        </div> <br>
+        </div> <br> -->
         <div id="link" onclick="panier()">
             <div class="left">
                 <i class='bx bxs-shopping-bag-alt'></i>
