--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -1,4 +1,5 @@
 <div class="slider-container nav-bar">
+    <br>
     <h3 style="text-align: start; margin-left: 10px;">Nos categories</h3>
     <div class="slider" id="slider">
         <div class="nav-bar-card shadow-sm" onclick="maison()"> 
@@ -34,7 +35,6 @@
             <div class="carte-top">
                 <p>Telephone, Pc et<br>
                     accessoires
-                    
                 </p>
             </div>
             <div class="carte-bottom">
@@ -44,9 +44,7 @@
        
         <div class="nav-bar-card shadow-sm"  onclick="habitsF()">
             <div class="carte-top">
-                <p>Vêtements et <br>
-                    chaussures Femme 
-                </p>
+                <p>Vêtements <br> femme</p>
             </div>
             <div class="carte-bottom">
                 <img src="/img/femme.jpg" width="40" alt="">
@@ -55,8 +53,7 @@
         </div>
         <div class="nav-bar-card shadow-sm"  onclick="habitsH()">
             <div class="carte-top">
-                <p>Vêtements et <br>
-                    chaussures Homme 
+                <p>Vêtements <br> homme 
                 </p>
             </div>
             <div class="carte-bottom">
