--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -39,7 +39,7 @@
   <%- include('composants/panier.ejs') %>
 
   <br> <br> <br>
-  <div class="d-flex justify-content-between" style="width: 40%;">
+  <div class="d-flex justify-content-between" style="width: 40%; padding-top: 15px;">
     <a href="#" onclick="goBack()">Retour</a>
   </div>
   <br>
