--- a/views/composants/nav.ejs
+++ b/views/composants/nav.ejs
@@ -17,7 +17,7 @@
 
     <form class="form" id="search">
         <label for="search">
-            <input required="" autocomplete="off" placeholder="Qu'est-ce qui vous ferait plaisir ? " id="search" type="text">
+            <input style="padding-left: 10px;" required="" autocomplete="off" placeholder="Qu'est-ce qui vous ferait plaisir ? " id="search" type="text">
             <!-- <div class="icon">
                 <svg stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="swap-on">
                     <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linejoin="round" stroke-linecap="round"></path>
