--- a/public/css/style.css
+++ b/public/css/style.css
@@ -775,7 +775,7 @@
     padding: 5px;
     margin: 5px;
     margin-bottom: 10px;
-    height: auto;
+    height: 300px;
     background-color: white;
     border-radius: 18px;
     white-space: nowrap;
@@ -792,7 +792,7 @@
     margin: 5px 0px 0px 0px;
     padding: 15px;
     width: 100%;
-    height: 40px;
+    height: 5vh;
     text-align: center;
     font-size: 1rem;
     letter-spacing: 1px;
