--- a/public/css/style.css
+++ b/public/css/style.css
@@ -789,12 +789,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px 0px 0px 0px;
-    padding: 15px;
+    margin: 5px 0px 6px 0px;
     width: 100%;
-    height: 5vh;
+    height: 40px;
     text-align: center;
-    font-size: 1rem;
+    font-size: 0.9rem;
     letter-spacing: 1px;
     text-decoration: none;
     color: #11c81d;
